--- a/index.html
+++ b/index.html
@@ -3,20 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مانغا</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        .container { max-width: 800px; margin: auto; }
-        .manga { margin: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; }
-    </style>
+    <title>OK TEAM - موقع مانغا</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>موقع المانغا</h1>
-    <div class="container">
-        <div class="manga">
-            <h2>اسم المانغا</h2>
-            <p>وصف قصير عن المانغا.</p>
-        </div>
-    </div>
+    <!-- الشعار و القائمة الرئيسية -->
+    <header>
+        <h1>OK TEAM</h1>
+        <nav>
+            <a href="#">الرئيسية</a>
+            <a href="#">الأحدث</a>
+            <a href="#">الأكثر قراءة</a>
+            <a href="#">تواصل معنا</a>
+        </nav>
+    </header>
+
+    <!-- قائمة المانغا -->
+    <main>
+        <section class="manga-list">
+            <div class="manga">
+                <img src="cover1.jpg" alt="غلاف المانغا 1">
+                <h3>مانغا 1</h3>
+                <a href="#">قراءة الآن</a>
+            </div>
+            <div class="manga">
+                <img src="cover2.jpg" alt="غلاف المانغا 2">
+                <h3>مانغا 2</h3>
+                <a href="#">قراءة الآن</a>
+            </div>
+            <!-- أضف المزيد من العناصر لعرض مزيد من المانغا -->
+        </section>
+    </main>
+
+    <!-- التذييل -->
+    <footer>
+        <p>&copy; 2024 OK TEAM - جميع الحقوق محفوظة</p>
+    </footer>
 </body>
-</html>
+    </html>
