--- a/index.html
+++ b/index.html
@@ -41,3 +41,12 @@
     </footer>
 </body>
 </html>
+<header>
+    <h1>OK TEAM</h1> <!-- شعار الموقع -->
+    <nav>
+        <a href="#">الرئيسية</a>
+        <a href="#">الأحدث</a>
+        <a href="#">الأكثر قراءة</a>
+        <a href="#">تواصل معنا</a>
+    </nav>
+</header>
