--- a/index.html
+++ b/index.html
@@ -50,3 +50,6 @@
         <a href="#">تواصل معنا</a>
     </nav>
 </header>
+<footer>
+    <p>&copy; 2024 OK TEAM - جميع الحقوق محفوظة</p>
+    </footer>
